--- a/sourcing/build.gradle
+++ b/sourcing/build.gradle
@@ -17,8 +17,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.jsoup:jsoup:1.14.3'
 }
 
 tasks.named('test') {
